<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".PrimeiraActivity">




        <item android:id="@+id/action_settings" android:title="@string/action_settings"
            android:orderInCategory="100" app:showAsAction="always" />

        <item android:id="@+id/action_grupo" android:title="@string/actionGrupo"
                android:orderInCategory="100" app:showAsAction="always" >

            <menu>


                <item android:id="@+id/action_menuOp1" android:title="@string/menuOp1"
                    android:orderInCategory="100" app:showAsAction="always" />


                <item android:id="@+id/action_menuOp2" android:title="@string/menuOp2"
                    android:orderInCategory="100" app:showAsAction="always" />

            </menu>

        </item>





</menu>
