<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PrimeiraActivity"
    android:onClick="mais">

    <TextView android:text="@string/contador" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtNumero"
        android:textSize="25sp"
        android:textColor="#ff1d30" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMais"
        android:id="@+id/btnMais"
        android:layout_below="@+id/txtNumero"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:onClick="mais" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMenos"
        android:id="@+id/btnMenos"
        android:layout_alignBottom="@+id/btnMais"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="menos" />

</RelativeLayout>
